Added FRtester + Simple FRscenario bash script (using FRtester and test2victim) + Fix to FRAttacker and CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,15 @@
 # cmake_minimum_required(VERSION <specify CMake version here>)
 project(Workshop_2019)
-
+cmake_minimum_required(VERSION 2.8)
 set(CMAKE_CXX_STANDARD 14)
-
+set(CMAKE_CXX_STANDARD_REQUIRED OFF)
+set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_COMPILER "/usr/local/bin/g++-8.3.0") #/usr/local/bin/g++-8.3.0
+set(CMAKE_C_COMPILER "/usr/local/bin/gcc-8.3.0")  #/usr/local/bin/gcc-8.3.0
 include_directories(Library)
 
-add_executable(Workshop_2019
+
+add_library(Workshop_2019
         Library/Attacker.cpp
         Library/Attacker.h
         Library/FRAttacker.cpp
@@ -13,10 +17,8 @@ add_executable(Workshop_2019
         Library/Measurements.cpp
         Library/Measurements.h
         Library/MemoryAccess.h
-        Library/PPAttacker.cpp
-        Library/PPAttacker.h
         Library/Victim.cpp
-        Library/Victim.h
-        testing/test1.c
-        testing/test2attacker.c
-        testing/test2victim.c testing/FRtester.cpp)
+        Library/Victim.h)
+
+add_executable(FRtester testing/FRtester/main.cpp)
+target_link_libraries(FRtester Workshop_2019 -static)
